--- a/styles/globals.css
+++ b/styles/globals.css
@@ -907,6 +907,13 @@ a:focus {
   .img-box {
     max-width: 356px !important;
   }
+
+  .contact_link_box {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
