--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,919 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700&display=swap');
-body {
-  font-family: 'Mulish', sans-serif;
-  color: #0c0c0c;
-  background-color: #ffffff;
-  overflow-x: hidden;
-}
+/* @import url('style.css'); */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.layout_padding {
-  padding: 90px 0;
-}
-
-.layout_padding2 {
-  padding: 75px 0;
-}
-
-.layout_padding2-top {
-  padding-top: 75px;
-}
-
-.layout_padding2-bottom {
-  padding-bottom: 75px;
-}
-
-.layout_padding-top {
-  padding-top: 90px;
-}
-
-.layout_padding-bottom {
-  padding-bottom: 90px;
-}
-
-.layout_margin-top {
-  margin-top: 90px;
-}
-
-.layout_margin-bottom {
-  margin-bottom: 90px;
-}
-
-.heading_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-}
-
-.heading_container h2 {
-  position: relative;
-  font-weight: bold;
-  margin-bottom: 0;
-  text-transform: uppercase;
-  padding-bottom: 5px;
-}
-
-.heading_container h2::before {
+.section-title::before {
   content: '';
   position: absolute;
   left: 0;
   bottom: 0;
   width: 50px;
   height: 3px;
-  background: #0081bc;
   border-radius: 10px;
+  @apply bg-rose-600;
 }
 
-.heading_container p {
-  margin-top: 10px;
-  margin-bottom: 0;
+.link {
+  @apply inline-block w-full rounded bg-rose-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-rose-700 focus:outline-none focus:ring active:bg-rose-500 sm:w-auto;
 }
 
-.heading_container.heading_center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  text-align: center;
+.link-white {
+  @apply block w-full rounded bg-white hover:bg-gray-100 px-12 py-3 text-sm font-medium text-rose-600 shadow hover:text-rose-700 focus:outline-none focus:ring active:text-rose-500 sm:w-auto;
 }
-
-.heading_container.heading_center h2::before {
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-a,
-a:hover,
-a:focus {
-  text-decoration: none !important;
-}
-
-a:hover,
-a:focus {
-  color: initial;
-}
-
-.btn,
-.btn:focus {
-  outline: none !important;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-/*header section*/
-.hero_area {
-  position: relative;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.hero_area .hero_bg_box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.hero_area .hero_bg_box img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: bottom left;
-  object-position: bottom left;
-}
-
-.sub_page .hero_area {
-  min-height: auto;
-  background-color: #002c3e;
-}
-
-.sub_page .hero_area .hero_bg_box {
-  display: none;
-}
-
-.header_section {
-  padding: 15px 0;
-}
-
-.header_section .container-fluid {
-  padding-right: 25px;
-  padding-left: 25px;
-}
-
-.navbar-brand span {
-  font-weight: bold;
-  font-size: 28px;
-  color: #ffffff;
-  text-transform: uppercase;
-}
-
-.custom_nav-container {
-  padding: 0;
-}
-
-.custom_nav-container .navbar-nav {
-  margin-left: auto;
-}
-
-.custom_nav-container .navbar-nav .nav-item .nav-link {
-  padding: 5px 20px;
-  color: #ffffff;
-  text-align: center;
-  text-transform: uppercase;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.custom_nav-container .navbar-nav .nav-item .nav-link:hover {
-  /* color: #0081bc; */
-  background: #0081bc;
-}
-
-.custom_nav-container .nav_search-btn {
-  width: 35px;
-  height: 35px;
-  padding: 0;
-  border: none;
-  color: #ffffff;
-  background: #0081bc;
-}
-
-.custom_nav-container .navbar-toggler {
-  outline: none;
-}
-
-.custom_nav-container .navbar-toggler {
-  padding: 0;
-  width: 37px;
-  height: 42px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.custom_nav-container .navbar-toggler span {
-  display: block;
-  width: 35px;
-  height: 4px;
-  background-color: #ffffff;
-  margin: 7px 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  position: relative;
-  border-radius: 5px;
-  transition: all 0.3s;
-}
-
-.custom_nav-container .navbar-toggler span::before,
-.custom_nav-container .navbar-toggler span::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #ffffff;
-  top: -10px;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.custom_nav-container .navbar-toggler span::after {
-  top: 10px;
-}
-
-.custom_nav-container .navbar-toggler[aria-expanded='true'] {
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
-}
-
-.custom_nav-container .navbar-toggler[aria-expanded='true'] span {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.custom_nav-container .navbar-toggler[aria-expanded='true'] span::before,
-.custom_nav-container .navbar-toggler[aria-expanded='true'] span::after {
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-  top: 0;
-}
-
-/*end header section*/
-/* slider section */
-.slider_section {
-  padding: 75px 0 145px 0;
-}
-
-.slider_section .row {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.slider_section #customCarousel1 {
-  width: 100%;
-  position: unset;
-}
-
-.slider_section .detail-box {
-  color: #002c3e;
-  text-align: center;
-}
-
-.slider_section .detail-box h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-bottom: 15px;
-  color: #ffffff;
-}
-
-.slider_section .detail-box p {
-  color: #fefefe;
-  font-size: 14px;
-}
-
-.slider_section .detail-box .btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin: 0 -5px;
-  margin-top: 25px;
-}
-
-.slider_section .detail-box .btn-box a {
-  display: inline-block;
-  padding: 10px 45px;
-  background-color: #0081bc;
-  color: #ffffff;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: none;
-}
-
-.slider_section .detail-box .btn-box a:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-}
-
-.slider_section .carousel_btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin: 75px auto 0 auto;
-}
-
-.slider_section .carousel_btn-box a {
-  position: unset;
-  width: 50px;
-  height: 50px;
-  background-color: #0081bc;
-  opacity: 1;
-  color: #ffffff;
-  font-size: 18px;
-  border-radius: 100%;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  margin: 0 3px;
-}
-
-.slider_section .carousel_btn-box a:hover {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.about_section .row {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.about_section img {
-  width: 100%;
-}
-
-.about_section .detail-box {
-  position: relative;
-}
-
-.about_section .detail-box p {
-  margin-top: 15px;
-}
-
-.about_section .detail-box a {
-  display: inline-block;
-  padding: 10px 35px;
-  background-color: #0081bc;
-  color: #ffffff;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: none;
-  text-transform: uppercase;
-}
-
-.about_section .detail-box a:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-}
-
-.service_section {
-  position: relative;
-}
-
-.service_section .row > div:nth-child(odd) .img-box {
-  -webkit-box-ordinal-group: 3;
-  -ms-flex-order: 2;
-  order: 2;
-  margin-left: 15px;
-}
-
-.service_section .row > div:nth-child(odd) .detail-box {
-  -webkit-box-ordinal-group: 2;
-  -ms-flex-order: 1;
-  order: 1;
-  text-align: right;
-}
-
-.service_section .row > div:nth-child(even) .img-box {
-  -webkit-box-ordinal-group: 2;
-  -ms-flex-order: 1;
-  order: 1;
-  margin-right: 15px;
-}
-
-.service_section .row > div:nth-child(even) .detail-box {
-  -webkit-box-ordinal-group: 3;
-  -ms-flex-order: 2;
-  order: 2;
-  text-align: left;
-}
-
-.service_section .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-top: 45px;
-  background-color: #ffffff;
-  border-radius: 5px;
-}
-
-.service_section .img-box {
-  width: 125px;
-  min-width: 125px;
-  height: 125px;
-  margin-bottom: 15px;
-  background: #0081bc;
-  border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.service_section .img-box img {
-  width: 65px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.service_section .detail-box h5 {
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.service_section .btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin-top: 45px;
-}
-
-.service_section .btn-box a {
-  display: inline-block;
-  padding: 10px 45px;
-  background-color: #002c3e;
-  color: #ffffff;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: none;
-}
-
-.service_section .btn-box a:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-}
-
-.gallery_section {
-  background: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(#87fbf6),
-    to(#0081bc)
-  );
-  background: linear-gradient(to right, #0081bc, #002c3e);
-}
-
-.gallery_section .heading_container {
-  color: #ffffff;
-  margin-bottom: 25px;
-}
-
-.gallery_section .box {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-  margin-top: 20px;
-  border: 5px solid #ffffff;
-}
-
-.gallery_section .box img {
-  width: 100%;
-  height: 100%;
-}
-
-.gallery_section .box .btn-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.gallery_section .box .btn-box a {
-  display: none;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin: 0 5px;
-  background-color: #ffffff;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  color: #000000;
-}
-
-.gallery_section .box::before {
-  content: '';
-  display: none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 44, 62, 0.8);
-  z-index: 0;
-}
-
-.gallery_section .box:hover a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.gallery_section .box:hover::before {
-  display: block;
-}
-
-.gallery_section .see_btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin-top: 45px;
-}
-
-.gallery_section .see_btn a {
-  display: inline-block;
-  padding: 12px 60px;
-  background-color: #0081bc;
-  color: #ffffff;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: none;
-  text-transform: uppercase;
-}
-
-.gallery_section .see_btn a:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-}
-
-.contact_section {
-  position: relative;
-}
-
-.contact_section .heading_container {
-  margin-bottom: 25px;
-}
-
-.contact_section .heading_container h2 {
-  text-transform: uppercase;
-}
-
-.contact_section .form_container input {
-  width: 100%;
-  border: 1px solid #ccc;
-  height: 50px;
-  margin-bottom: 15px;
-  padding-left: 20px;
-  outline: none;
-  color: #101010;
-  border-radius: 5px;
-}
-
-.contact_section .form_container input::-webkit-input-placeholder {
-  color: #002c3e;
-}
-
-.contact_section .form_container input:-ms-input-placeholder {
-  color: #002c3e;
-}
-
-.contact_section .form_container input::-ms-input-placeholder {
-  color: #002c3e;
-}
-
-.contact_section .form_container input::placeholder {
-  color: #002c3e;
-}
-
-.contact_section .form_container input.message-box {
-  height: 120px;
-  border-radius: 5px;
-}
-
-.contact_section .form_container button {
-  border: none;
-  width: 100%;
-  text-align: center;
-  display: inline-block;
-  padding: 12px 55px;
-  background-color: #0081bc;
-  color: #ffffff;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: none;
-}
-
-.contact_section .form_container button:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.15);
-}
-
-.contact_section .map_container {
-  height: 100%;
-  min-height: 375px;
-  border-radius: 5px;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  padding: 0;
-}
-
-.contact_section .map_container .map {
-  height: 100%;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-
-.contact_section .map_container .map #googleMap {
-  height: 100%;
-}
-
-.client_section .heading_container {
-  margin-bottom: 45px;
-}
-
-.client_section .client_box {
-  max-width: 800px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  margin: 0 auto;
-}
-
-.client_section .client_box .img-box {
-  min-width: 175px;
-  max-width: 175px;
-  position: relative;
-  margin-right: -75px;
-}
-
-.client_section .client_box .img-box img {
-  width: 100%;
-  position: relative;
-  z-index: 5;
-}
-
-.client_section .client_box .img-box::before {
-  content: '';
-  width: calc(100% + 20px);
-  height: calc(100% - 40px);
-  position: absolute;
-  bottom: -10px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  background-color: #0081bc;
-  z-index: 2;
-}
-
-.client_section .client_box .detail-box {
-  background-color: #222222;
-  color: #ffffff;
-  padding: 35px 35px 30px 120px;
-  position: relative;
-  margin-top: 75px;
-}
-
-.client_section .client_box .detail-box h5 {
-  padding-left: 30px;
-}
-
-.client_section .client_box .detail-box p {
-  color: #f1f2f3;
-}
-
-.client_section .client_box .detail-box::before,
-.client_section .client_box .detail-box::after {
-  width: 30px;
-  height: 25px;
-  position: absolute;
-  background-size: cover;
-  background-repeat: no-repeat;
-  font-family: 'FontAwesome';
-  font-size: 24px;
-}
-
-.client_section .client_box .detail-box::before {
-  /* content: "\f10d"; */
-  content: open-quote;
-  top: 25px;
-  left: 16%;
-}
-
-.client_section .client_box .detail-box::after {
-  /* content: "\f10e"; */
-  content: close-quote;
-  bottom: 25px;
-  right: 25px;
-}
-
-.client_section ol.carousel-indicators {
-  position: unset;
-  margin-top: 45px;
-}
-
-.client_section ol.carousel-indicators li {
-  opacity: 1;
-  background-color: #0081bc;
-  width: 35px;
-  height: 5px;
-  border-radius: 9px;
-  background-clip: unset;
-  border: none;
-}
-
-.client_section ol.carousel-indicators li.active {
-  background-color: #002c3e;
-}
-
-.info_section {
-  background-color: #00142f;
-  color: #ffffff;
-  padding: 75px 0;
-}
-
-.info_section h5 {
-  margin-bottom: 20px;
-  font-weight: 400;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.info_section .contact_link_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.info_section .contact_link_box a {
-  margin: 5px 15px;
-  color: #ffffff;
-  text-align: center;
-}
-
-.info_section .contact_link_box a i {
-  margin-right: 5px;
-}
-
-.info_section .contact_link_box a:hover {
-  color: #0081bc;
-}
-
-.info_section .info_social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-
-.info_section .info_social a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  color: #ffffff;
-  border-radius: 100%;
-  margin: 0 10px;
-  font-size: 24px;
-}
-
-.info_section .info_social a:hover {
-  color: #0081bc;
-}
-
-/* footer section*/
-.footer_section {
-  background-color: #00142f;
-}
-
-.footer_section p {
-  margin: 0;
-  padding: 20px 0;
-  text-align: center;
-  color: #ffffff;
-  border-top: 1px solid #ffffff;
-}
-
-.footer_section p a {
-  color: inherit;
-}
-
-.whatsapp-button {
-  width: 70px;
-  height: 70px;
-  transition: all 0.3s ease-in-out;
-}
-
-.whatsapp-button:hover {
-  width: 80px;
-  height: 80px;
-}
-
-@media screen and (max-width: 600px) {
-  .client_box {
-    display: block !important;
-  }
-
-  .detail-box {
-    margin-top: 0 !important;
-    /* padding: 35px 35px 30px 45px !important; */
-  }
-
-  .img-box {
-    max-width: 356px !important;
-  }
-
-  .contact_link_box {
-    display: flex !important;
-    flex-direction: column !important;
-    align-items: center !important;
-    justify-content: center !important;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
