feat: new version done

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 }
 
 .link-white {
-  @apply block w-full rounded bg-white hover:bg-gray-100 px-12 py-3 text-sm font-medium text-rose-600 shadow hover:text-rose-700 focus:outline-none focus:ring active:text-rose-500 sm:w-auto;
+  @apply block w-full rounded bg-white px-12 py-3 text-sm font-medium text-rose-600 shadow hover:bg-gray-100 hover:text-rose-700 focus:outline-none focus:ring active:text-rose-500 sm:w-auto;
 }
 
 .centered {
